[package]
name = "pak"
version = "0.1.0"
authors = ["Ulf Ejlertsson <ulf.ejlertsson@gmail.com>"]

[dependencies]
lz4 = "1.21"
dotenv = "*"
dotenv_codegen = "*"
log = "0.4.0"
env_logger = "0.5.10"

[dependencies.rusqlite]
version = "0.12.0"
features = ["blob", "bundled"]

[workspace]
members = ["cli"]
